manifest/objects/LVGO__Enrollment_Communications_Survey__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>LVGO__Account__c</referenceTo>
        <relationshipLabel>Enrollment Communications Surveys</relationshipLabel>
        <relationshipName>Enrollment_Communications_Surveys</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Annual_Notice_of_Change_Content_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Notice of Change Content Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Behavioral_Health_Eligibility_Sentence__c</fullName>
        <label>Behavioral Health Eligibility Sentence</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_Communicates_by_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Communicates by Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_Implementation_Manager__c</fullName>
        <formula>LVGO__Account__r.LVGO__Client_Implementation_Manager__r.FirstName +&apos; &apos;+ LVGO__Account__r.LVGO__Client_Implementation_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Implementation Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_Sending_Announcement_DMM__c</fullName>
        <label>Client Sending Announcement DMM?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Client_able_to_send_HR_comms__c</fullName>
        <label>Client able to send HR comms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Email_Address__c</fullName>
        <label>Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Data_Types_Provided_for_Enrollment__c</fullName>
        <label>Data Types Provided for Enrollment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email addresses</fullName>
                </value>
                <value>
                    <fullName>Mailing addresses</fullName>
                </value>
                <value>
                    <fullName>Mobile phone number</fullName>
                </value>
                <value>
                    <fullName>Home phone number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Diabetes_Eligibility_Sentence__c</fullName>
        <label>Diabetes Eligibility Sentence</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Disclaimer__c</fullName>
        <label>Disclaimer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Employee_Title__c</fullName>
        <label>Employee Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Enrollment_Communications_Survey_Type__c</fullName>
        <label>Enrollment Communications Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Standard – Partnership</fullName>
                </value>
                <value>
                    <fullName>New Partnership Setup Survey</fullName>
                </value>
                <value>
                    <fullName>Medicare/Medicaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Enrollment_Marketing_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Marketing Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enrollment_Communications_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Estimated_Review_Timeline__c</fullName>
        <label>Estimated Review Timeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__General_Eligibility_Sentence__c</fullName>
        <label>General Eligibility Sentence</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Hypertension_Eligibility_Sentence__c</fullName>
        <label>Hypertension Eligibility Sentence</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Include_Population_Covered_Dependents__c</fullName>
        <label>Include Population &amp; Covered Dependents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Livongo_Programs__c</fullName>
        <label>Livongo Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Hypertension</fullName>
                </value>
                <value>
                    <fullName>Prediabetes</fullName>
                </value>
                <value>
                    <fullName>Weight Management</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                    <label>myStrength</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Marketing_Name__c</fullName>
        <label>Marketing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Medicare_Annual_Enrollment_Consideration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medicare Annual Enrollment Consideration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Medicare_Enrollment_Period_Notes__c</fullName>
        <label>Medicare Enrollment Period Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__OE_Month_End__c</fullName>
        <label>OE Month End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__OE_Month_Start__c</fullName>
        <label>OE Month Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__OE_Period_Length__c</fullName>
        <label>OE Period Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 week</fullName>
                </value>
                <value>
                    <fullName>2 weeks</fullName>
                </value>
                <value>
                    <fullName>3 weeks</fullName>
                </value>
                <value>
                    <fullName>4 weeks</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Org_specific_Medicare_Requirement_Notes__c</fullName>
        <label>Org-specific Medicare Requirement Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Organization_specific_Medicare_Requireme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organization-specific Medicare Requireme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Other_HR_Communication__c</fullName>
        <label>Other HR Communication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Populations_Excluded__c</fullName>
        <label>Populations Excluded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Prediabetes_Eligibility_Sentence__c</fullName>
        <label>Prediabetes Eligibility Sentence</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Recipient_Email__c</fullName>
        <inlineHelpText>Name of the user the survey has sent to.</inlineHelpText>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LVGO__Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Survey_Status_Updated_Date__c</fullName>
        <label>Survey Status Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LVGO__Survey_Status__c</fullName>
        <label>Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Resent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Survey_URL__c</fullName>
        <formula>HYPERLINK($Label.LVGO__Enrollment_Communications_Survey_Community_URL+Id, $Label.LVGO__Enrollment_Communications_Survey_Community_URL+Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Weight_Management_Eligibility_Sentence__c</fullName>
        <label>Weight Management Eligibility Sentence</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>LV Enrollment Communications Survey</label>
    <listViews>
        <fullName>LVGO__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Survey-{0000}</displayFormat>
        <label>Enrollment Communications Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LV Enrollment Communications Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>